Data is sorted and stacked